--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch index.js",
+   
+    "dev": "node --watch -r dotenv/config index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -15,6 +16,10 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "gp": "^0.0.1",
-    "pg": "^8.12.0"
+    "pg": "^8.12.0",
+    "pg-hstore": "^2.3.4"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
