--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-   
-    "dev": "node --watch -r dotenv/config index.js",
+    "dev": "node -r dotenv/config --watch index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -15,7 +14,6 @@
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "gp": "^0.0.1",
     "pg": "^8.12.0",
     "pg-hstore": "^2.3.4"
   },
