--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "dev": "node --watch index.js",
+    "dev": "node -r dotenv/config --watch index.js",
     "start": "node index.js"
   },
   "keywords": [],
@@ -16,5 +16,8 @@
     "express": "^4.19.2",
     "gp": "^0.0.1",
     "pg": "^8.12.0"
+  },
+  "devDependencies": {
+    "dotenv": "^16.4.5"
   }
 }
